# belenios-mel-verifier

./: .ocamlformat  README.md  belenios-verifier.opam  dune-project  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml  github-pages.yml
src/: ballot.ml  display.ml  dune  encrypted_tally.ml  file.ml  generate_ballot.ml  helpers.ml  load.js  loader.ml  main.ml  partial_decryption.ml  result.ml  setup.ml  state.ml  totals.ml  verification.ml  verify.ml
