opam-version: "2.0"
synopsis: "Belenios Melange Verifier"
description: "An external verifier for Belenios elections"
maintainer: ["maxime.lalisse@gmail.com"]
authors: ["Maxime Lalisse"]
license: "AGPL-3"
homepage: "https://github.com/mjal/belenios-mel-verifier"
bug-reports: "https://github.com/mjal/belenios-mel-verifier/issues"
depends: [
  "ocaml"
  "reason" {>= "3.10.0"}
  "dune" {>= "3.9"}
  "melange" {>= "2.0.0"}
  "melange-webapi" {>= "0.21.0"}
  "opam-check-npm-deps" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "ocaml-lsp-server" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "dot-merlin-reader" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "ocamlformat" {= "0.26.1"}
  "odoc" {with-doc}
]
dev-repo: "git+https://github.com/mjal/belenios-mel-verifier.git"
