(lang dune 3.8)
(using melange 0.1)
(name belenios-verifier)
(license "MIT")
(maintainers "stephane.glondu@inria.fr")
(authors "Maxime Lalisse")
(homepage "https://github.com/mjal/belenios-mel-verifier")
(bug_reports "https://github.com/mjal/belenios-mel-verifier/issues")
(package
 (allow_empty)
 (name belenios-verifier)
 (synopsis "Belenios Verifier")
 (description "A verifier for Belenios elections"))
